<resources>
    <string name="app_name">Ptt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bookmarked_recipes">Bookmarked logins</string>
    <string name="title_bookmarked">Bookmarked</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Full name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="did_you_forget_your_password">Did you forget your Password ?</string>
    <string name="login">Login</string>
    <string name="Please_enter_username">Please enter username</string>
    <string name="Please_enter_password">Please enter password</string>
    <string name="get_code">Get Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Mail address</string>
    <string name="phone_no">Phone no.</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="powered_by">Powered by</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_mobile_number_associated_with_your_account">Enter your mobile number associated with your account</string>
    <string name="we_will_send_you_a_text_message_to_reset_your_password">We will send you a text message to reset your password</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="ssn">SSN</string>
    <string name="gender">Gender</string>
    <string name="home">Home</string>
    <string name="search_for_channel">Search for channel</string>
    <string name="channels">Channels</string>
    <string name="profile">Profile</string>
    <string name="verification">Verification</string>
    <string name="enter_the_verification_code_that_we_just_sent_it_to_you_on_your_mobile_number">Enter the verification code that we just sent it to you on your mobile number</string>
    <string name="if_you_didn_t_receive_a_code">If you didn’t receive a code !</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>

    <string name="change_language">You want to change language?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="Please_enter_your_old_password">Please enter your old password</string>
    <string name="Please_enter_your_the_new_password">Please enter the new password</string>
    <string name="Please_confirm_the_new_password">Please confirm the new password</string>
    <string name="this_fields_must_be_the_same">Password confirmation does not match</string>
    <string name="the_password_must_be_between_6_and_8_characters">The Password must be between 6 and 8 characters.\n
At least one Special Character, Small letter &amp; Capital letter &amp; Number.</string>
    <string name="Please_enter_fullname">Please enter full name</string>
    <string name="Please_enter_valid_email">Please enter valid email</string>
    <string name="Please_enter_mobile">Please enter valid phone</string>
    <string name="Please_enter_ssn">Please enter SSN</string>
    <string name="Please_enter_address">Please enter address</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="are_you_sure_you_want_to_discard_all_changes_you_ve_made">your changes cannot be saved if you confirm to cancel</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_changes">Cancel changes ?</string>

    <string name="please_choose_smaller_image">Selected File is larger than 3 MB</string>

</resources>
