<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivImg"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginTop="86dp"
        android:src="@drawable/ptt_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/c_white"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_username"
            android:background="@drawable/bg_et_rounded"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="13sp"
            android:gravity="start|center_vertical"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout_username"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_et_rounded"
            android:textSize="13sp"
            android:drawablePadding="16dp"
            android:gravity="start|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="10sp"
        android:text="@string/did_you_forget_your_password"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/login_layout_password"
        app:layout_constraintTop_toBottomOf="@+id/login_layout_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="15sp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/login"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout_password" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAfaqyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_afaqy_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPoweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_afaqy_logo"
        android:text="@string/powered_by"
        android:textColor="#2E2E2E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivAfaqyLogo"
        app:layout_constraintEnd_toStartOf="@+id/ivAfaqyLogo"
        app:layout_constraintTop_toTopOf="@+id/ivAfaqyLogo" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>