<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".features.editprofile.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        app:elevation="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_profile"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/blue"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfile"
        android:clickable="false"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivEdit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bg_circle_black_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:drawableTop="@drawable/ic_edit"
        android:text="Edit"
        android:textColor="@color/c_white"
        app:layout_constraintBottom_toBottomOf="@+id/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_layout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/transparent_text_color"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:hint="@string/fullname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/transparent_text_color"
            android:textSize="12sp"
            tools:text="mennaanwer" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/transparent_text_color"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:text="aaa" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/transparent_text_color"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="start|center_vertical"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:text="aaaaaaaa"
            android:textAlignment="viewStart"


            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:text="@string/change_password"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_layout_password"
        app:layout_constraintEnd_toEndOf="@+id/profile_layout_password"
        app:layout_constraintTop_toTopOf="@+id/profile_layout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_layout_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/transparent_text_color"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout_password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:hint="@string/phone_no"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="40dp"
            android:paddingTop="4dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="12sp"
        app:ccp_arrowColor="@color/colorPrimary"
        app:ccp_autoDetectCountry="true"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="16dp"
        app:ccp_contentColor="@color/colorPrimary"
        app:ccp_defaultNameCode="SA"
        app:ccp_showArrow="false"
        app:ccp_showFlag="false"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="false"
        app:ccp_showPhoneCode="true"
        app:ccp_textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_layout_phone"
        app:layout_constraintBottom_toBottomOf="@+id/profile_layout_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_layout_ssn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/transparent_text_color"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_et_ssn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:hint="@string/ssn"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_layout_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/transparent_text_color"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout_ssn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAfaqyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_afaqy_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPoweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_afaqy_logo"
        android:text="@string/powered_by"
        android:textColor="#2E2E2E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivAfaqyLogo"
        app:layout_constraintEnd_toStartOf="@+id/ivAfaqyLogo"
        app:layout_constraintTop_toTopOf="@+id/ivAfaqyLogo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buSubmit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="15sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/submit"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout_address" />

    <ProgressBar
        android:id="@+id/progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>